refactor(nodejs)!: update models and query logic for PostgreSQL migration
